src/test/resources/testprojects/minishift/endpointroutes/expected.yaml
# Generated by toolform (0.0.1-SNAPSHOT)
# Source file: /Users/seandawson/Development/toolform/src/test/resources/testprojects/minikube/edgeprotocolportmapping/environment.conf
# Date: 24/10/2017
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    source.path: "some/component"
    project.artefact: "true"
  name: some-component
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: some-component
    spec:
      containers:
      -
        image: se_swip/some_component
        name: some-component
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Route
metadata:
  name: should_be_80
spec:
  to:
    kind: Service
    name: some-component
---
apiVersion: v1
kind: Route
metadata:
  name: should_be_443
spec:
  to:
    kind: Service
    name: some-component
  tls:
    termination: Edge
    insecureEdgeTerminationPolicy: none
